--- a/public/assets/js/css/style.css
+++ b/public/assets/js/css/style.css
@@ -1,8 +1,21 @@
-html,
-body {
+html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+h1, h2, h3, h4, h5 , h6 {
+  font-family: 'Bebas Neue', cursive;
+font-family: 'Oswald', sans-serif;
+
+h1.display-4 {
+  font-size: 60pt;
+  letter-spacing: 1.5pt;
+}
+
+h4.subtitle {
+  font-size: 35pt;
+  letter-spacing: 1pt;
 }
 
 .save-note {
@@ -16,8 +29,7 @@ body {
   cursor: pointer;
 }
 
-.note-textarea,
-.note-title {
+.note-textarea, .note-title {
   color: #000000;
   width: 100%;
   outline: none;
@@ -36,8 +48,7 @@ body {
   font-size: 3rem;
 }
 
-.note-title:read-only,
-.note-textarea:read-only {
+.note-title:read-only, .note-textarea:read-only {
   color: #757575;
 }
 
@@ -60,11 +71,6 @@ body {
   border-top-left-radius: 0;
 }
 
-.list-item-title {
-  display: inline-block;
-  width: 75%;
-}
-
 .list-container i {
   font-size: 1.1rem;
   cursor: pointer;
@@ -75,4 +81,15 @@ body {
   border-right: none;
   padding: 20px;
   cursor: pointer;
+  font-family: 'Just Another Hand', cursive;
+  font-size: 24pt;
+  letter-spacing: 1pt;
+}
+
+.nav-bg {
+  background-color: #856c8b !important;
+}
+
+.container-bg {
+  background-color: #f4eeff;
 }
